prover-ray/zkcdriver/testdata/synced/invalid/field_02.zkc
//error:4:13-14:expected type u32
//error:4:9-14:expected type 𝔽
fn f(x:u32, y:𝔽) -> (r:𝔽) {
    r = x + y
    return
}
